[octave] changed the default octave executable from 'octave-cli' to 'octave' which seems to be the only working interface in >6.0 and set the recommended version to 6.2.

BUG: 434271
FIXED-IN: 22.03